@@ -25,8 +25,10 @@ module Druid
   # @example Example routes defined in env.rb
   #  Druid::PageFactory.routes = {
   #    :default => [[PageOne,:method1], [PageTwoA,:method2], [PageThree,:method3],
-  #    :another_route => [[PageOne,:method1], [PageTwoB,:method2b], [PageThree,:method3]]
+  #    :another_route => [[PageOne,:method1,"arg1"], [PageTwoB,:method2b], [PageThree,:method3]]
   #   }
+  # Notice the first entry of :another_route is passing an argument
+  # to the method
   # You must also call the navigation_method on each page.
   module PageFactory
     # attr_accessor :page
@@ -154,10 +156,11 @@ module Druid
     end
 
     def navigate_through_pages(pages)
-      pages.each do |cls, method|
+      pages.each do |cls, method, *args|
         page = on_page(cls)
-        fail("Navigation method not specified on #{cls}.  Please call the ") unless page.respond_to? method
-        page.send method
+        fail("Navigation method not specified on #{cls}.") unless page.respond_to? method
+        page.send method unless args
+        page.send method, *args if args
       end
     end
 
